--- a/public/css/parallax_slider/parallax_slider.css
+++ b/public/css/parallax_slider/parallax_slider.css
@@ -10,10 +10,10 @@
 }
 .da-slider{
 	width: 100%;
-	height: 650px;
+	height: 680px;
 	position: relative;
 	overflow: hidden;
-	background: transparent url(../../images/parallax_slider/22.jpg) repeat 0% 0%;
+	background: transparent url(../../images/parallax_slider/22.png) repeat 0% 0%;
 	-webkit-transition: background-position 1s ease-out 0.3s;
 	-moz-transition: background-position 1s ease-out 0.3s;
 	-o-transition: background-position 1s ease-out 0.3s;
