--- a/public/css/style.css
+++ b/public/css/style.css
@@ -84,7 +84,7 @@ h1, h2, h3 {
 	font-family: 'tommasoregular';
 	font-size: 35px;
 	letter-spacing: 3px;
-	text-transform: uppercase;
+	/*text-transform: uppercase;*/
 }
 h2 {
 	font-size: 35px;
@@ -143,20 +143,20 @@ p {
 	margin-bottom: -7px;
 }
 .Contact h2, .Contact h1 {
-	color: #fff;
+    color: #C13136;
 }
 .Contact .well {
-    background-color: rgba(249, 110, 91, 0.5);
+    background-color:  #fff;
 	box-shadow: none;
 }
 .Contact .well ul li {
 	margin-bottom: 10px;
 }
 .GetInTouch {
-	background-color: rgba(249, 110, 91, 0.5)!important;
+	background-color: #fff;!important;
 }
 .form-horizontal .control-label {
-	color: #FFFFFF;
+    color: #C13136;
 	float: none;
 	font-size: 17px;
 	padding: 5px 0;
